completed reverse sdd for auth user (#317)